#335 fix: carousel overflow fixed for M viewport, chore: formatting (#1360)
* #335 fix: carousel overflow fixed for M viewport, chore: formatting

* Fix issue when heading does not end with "|"

---------

--- a/aemedge/blocks/carousel/carousel.css
+++ b/aemedge/blocks/carousel/carousel.css
@@ -174,13 +174,13 @@
     height: 383px;
     margin-top: 40px;
     display: flex;
-    width:100%;
+    width: 100%;
     flex-direction: column;
 
     .carousel-slides {
       gap: 1rem;
       min-height: 327px;
-      width:100%;
+      width: 100%;
       padding: 10px 0;
     }
 
@@ -216,7 +216,7 @@
           border-radius: var(--udexRadiusXL);
           position: static;
           height: 100%;
-          width:100%;
+          width: 100%;
 
           > img {
             border-top-right-radius: var(--udexRadiusXL);
@@ -264,8 +264,8 @@
         }
 
         p {
-          margin:0;
-          padding:0;
+          margin: 0;
+          padding: 0;
           height: fit-content;
           line-height: 21px;
           font-size: var(--udexTypographyEyebrowMFontSize);
@@ -303,13 +303,14 @@
 
       /* stylelint-disable-next-line no-descending-specificity */
       button {
-        width: 42px;
-        height: 42px;
-        display: flex;
         align-items: center;
-        justify-content: center;
-        border: none;
         background-color: transparent;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        height: 42px;
+        justify-content: center;
+        width: 42px;
       }
 
       span {
@@ -325,8 +326,6 @@
     &.carousel-no-scroll nav {
       display: none;
     }
-
-
 
     .carousel-slide-indicators {
       display: flex;
@@ -382,22 +381,24 @@
   }
 }
 
-/* screen-size: S */
+/* =S */
 @media (width >= 640px) {
   .design-system {
-    .carousel {
-      .carousel-slide {
+    & .carousel {
+      & .carousel-slide {
         min-width: 248px;
         flex: 1 0 40%;
       }
+
       /* stylelint-disable-next-line rule-empty-line-before */
-      .carousel-slides {
+      & .carousel-slides {
         gap: 48px;
       }
+
       /* stylelint-disable-next-line no-duplicate-selectors */
-      .carousel-slide{
-        .carousel-slide-content {
-          p{
+      & .carousel-slide {
+        & .carousel-slide-content {
+          & p {
             max-height: 25px;
             text-overflow: ellipsis;
             overflow: hidden;
@@ -405,8 +406,8 @@
           }
         }
 
-        div[data-valign='middle'].carousel-slide-content{
-          p{
+        & div[data-valign='middle'].carousel-slide-content {
+          & p {
             white-space: unset;
           }
         }
@@ -415,7 +416,7 @@
   }
 }
 
-/* screen-size: M,L,XL */
+/* =M, =L, =XL */
 @media (width >= 980px) {
   .carousel {
     height: 327px;
@@ -432,17 +433,17 @@
   display: flex;
 }
 
-.carousel-slide .full-image{
-  aspect-ratio:4/3 !important;
-  height:100% !important;
+.carousel-slide .full-image {
+  aspect-ratio: 4/3 !important;
+  height: 100% !important;
 }
 
-.carousel-slide .hide-content{
-  display:none;
+.carousel-slide .hide-content {
+  display: none;
 }
 
-.zero-bottom-padding{
-  padding-bottom:0 !important;
+.zero-bottom-padding {
+  padding-bottom: 0 !important;
 }
 
 /* Carousel full-width variation */
@@ -517,25 +518,31 @@
   }
 }
 
+/* =M */
 @media (width >= 980px) {
   .design-system {
-    .carousel {
-      &.promo {
-        & .carousel-slide {
-          flex-direction: row;
-          align-items: center;
-        }
+    & .carousel {
+      & .carousel-slides {
+        gap: 48px;
+        justify-content: space-between;
       }
 
-      nav {
+      & .carousel-slide {
+        flex: 1 1 222px;
+        min-width: 222px;
+      }
+
+      & nav {
         display: flex;
       }
 
-      /* stylelint-disable-next-line no-descending-specificity */
-      .carousel-slide {
-        min-width: 228px;
-        flex: 1 0 30%;
+      &.promo {
+        & .carousel-slide {
+          align-items: center;
+          flex-direction: row;
+        }
       }
     }
   }
 }
+
